bug fix on image not showing in product:id

--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,5 +1,5 @@
 .container{
-  height: calc(100vh -100px);
+  height: calc(100vh - 100px); /* (100vh -100px) should have spacing rather (100 - 100px) */
   display: flex;
   padding-bottom: 2rem;
 }
@@ -13,13 +13,15 @@
   justify-content: center;
 }
 
+
+
+
 .right  {
   flex: 1;
+  padding: 20px;
 }
 
 .imgContainer{
-  align-items: center  ;
-  justify-content: center;
   width: 80%;
   height: 80%;
   position: relative;
